# InsuraLens

./: .gitignore
backend/: main.py  pyproject.toml  requirements.txt  test.py  test_intake_helper.py
backend/config/: claim_requriements.py
backend/database/: sqlite_db.py
backend/schemas/: claim_schema.py
backend/services/: claim_intake_service.py
backend/utils/: claim_id_generator.py  field_checker.py  intake_helper.py  message_builder.py
