[project]
name = "insuralens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.0",
    "easyocr>=1.7.2",
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.3.0",
    "langgraph>=0.2.0",
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pdfplumber>=0.11.0",
    "pillow>=11.0.0",
    "plotly>=6.0.0",
    "pydantic>=2.10.0",
    "pymupdf>=1.25.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.4.0",
    "streamlit>=1.45.0",
    "tqdm>=4.67.0",
    "uvicorn>=0.34.0",
]
